Hagamos un parrafo para nuestra pagina

--- a/pruebaG.html
+++ b/pruebaG.html
@@ -9,5 +9,6 @@
 <body>
     <header></header>
     <h1>Nuestro primer titulo</h1>
+    <p>Si la vida tiene momentos lindos es cuando tus manitos tocan mi cara y tus ojitos me ven.</p>
 </body>
 </html>
